--- a/test1.html
+++ b/test1.html
@@ -162,7 +162,7 @@
              drawAssociated();  
              if(mode=="fiber"){
                fixBoundaryPoints();    
-               inflationFuntion();
+               inflationFuntion3();
                OtherMouseControls();     
              }
              else{
